# arm-neon-opencv

./: .gitignore  CMakeLists.txt  README.md  compare_image.py  cuda.md  run.sh  show_coeffs.py  video_to_image.py
src/: cv_crop.cpp  cv_crop1.cpp  hwc2chw_test.cpp  img_change_layout.cpp  img_mean_std_dev.cpp  img_resize.cpp  img_resize_bilinear.cpp  img_resize_cubic.cpp  img_resize_inter_area.cpp  img_warp_affine.cpp  matrix.c  matrix_multiplication_test.cpp  yuv2bgr.cpp
src/common/: tensor.cpp  tensor_converter.h  tensor_cuda.cpp  tensor_cuda.h  va_allocator.cpp  va_allocator.h  va_cuda_allocator.cu  va_cuda_allocator.cuh
src/cv/: crop.cpp  crop.h  crop_cuda.h  crop_cuda_1d.cu  crop_cuda_1d_dynamic_threads.cu  crop_cuda_2d.cu  crop_cuda_2d_dynamic_threads.cu  crop_cuda_2d_dynamic_threads_host_alloc.cu  crop_cuda_2d_dynamic_threads_pitch.cu  crop_cuda_basic.cu  crop_cuda_basic_dynamic_threads.cu  crop_cuda_basic_dynamic_threads_zero_copy.cu  cuda_device.cu  cuda_device.h  cv.cpp  cv.h  cvt_color.cpp  cvt_color.h  imencode.h  match_template.h  normalize.cpp  normalize.h  normalize_naive.cpp  normalize_neon.cpp  resize.cpp  resize.h  resize_naive.cpp  resize_naive.h  resize_normalize.h  warp_affine.cpp  warp_affine.h  warp_affine_naive.cpp  warp_affine_normalize.cpp
src/neon_normalize/: dtype_change.cpp  layout_change.cpp  mean_std_dev.cpp
src/neon_warpaffine/: warp_affine.cpp
src/paddle-resize/: cubic_resize_float16.cpp  cubic_resize_float32.cpp  cubic_resize_naive.cpp  cubic_resize_naive_chw.cpp  image_resize.cc  image_resize.h
src/test/: CMakeLists.txt
src/test/src/: test_main.cpp
src/test/src/impl/: test_change_dtype.h  test_change_layout.h  test_crop.cpp  test_crop.h  test_normalize.cpp  test_warp_affine.h
src/test/src/profile/: cv_profile.cpp
src/util/: image_util.cpp  image_util.h  perf_util.cpp  perf_util.h
src/vision/: tensor.cpp  tensor.h  tensor_converter.cpp
src_deprecated/: cv_crop.cpp  hwc2chw_test.cpp  img_change_layout.cpp  img_mean_std_dev.cpp  img_resize_cubic.cpp  yuv2bgr.cpp
src_deprecated/neon_normalize/: layout_change.cpp
src_deprecated/neon_warpaffine/: warp_affine.cpp
src_deprecated/paddle-resize/: cubic_resize_float16.cpp  cubic_resize_float32.cpp
vision/common/: macro.h  tensor_converter.cpp  vision_structs.cpp  vision_structs.h
vision/cv/: crop.cpp  crop.h  cvt_color.cpp  imencode.cpp  match_template.cpp  normalize.cpp  normalize_naive.h  normalize_neon.cpp  normalize_neon.h  resize.cpp  resize_neon.cpp  resize_neon.h  resize_normalize.cpp  warp_affine.cpp  warp_affine_naive.h  warp_affine_normalize.h
vision/test/: CMakeLists.txt  README.md
vision/test/src/: test_main.cpp
vision/test/src/impl/: test_change_dtype.cpp  test_change_layout.cpp  test_crop.cpp  test_cvt_color.cpp  test_cvt_color.h  test_normalize.h  test_resize.cpp  test_resize.h  test_warp_affine.cpp
vision/test/src/profile/: cv_profile.h
